Finished quote styling, fixed cards styling
Finished quotes by adding another container to get the padding
correctly. Also fixed the styling on cards since it wasn't aligned
properly.

--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,14 +1,17 @@
 /* Cards*/
-.h2{
-  width: 100%;
-  text-align: center;
+.cards-content{
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 70%;
+  padding: 50px 0;
 }
 
 .card {
   max-width: 150px;
   display: flex;
   flex-flow: column wrap;
-  margin-left: 50px;
   margin-bottom: 2rem;
 }
 
