--- a/styles/header.css
+++ b/styles/header.css
@@ -1,15 +1,15 @@
 /* Header element styles */
 
+/* navigation */
 .navigation {
   width: 100%;
   display: flex;
-  align-items: baseline;
-  margin-bottom: 1em;
+  align-items: center;
+  border: 2px solid red;
 }
 
 .logo{
   flex-grow:1;
-  max-width: 100%;
 }
 
 .head-link {
@@ -20,6 +20,7 @@
   color: #fff09e;
 }
 
+/* content */
 .head-content {
   display: flex;
   align-items: start;
