--- a/styles/quotes.css
+++ b/styles/quotes.css
@@ -1,4 +1,25 @@
 /* quote */
-.quote-text {
-  color:
+.quotes-content{
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+  max-width: 70%;
+  padding: 50px 0;
+}
+
+.quote{
+  max-width: 100%;
+  margin: 0;
+  font-size: 34px;
+  font-weight: light;
+  font-style: italic;
+  text-align: justify;
+}
+
+.quote-author{
+  max-width: 100%;
+  margin: 0 0 0 auto;
+  font-size: larger;
+  font-weight: bold;
 }
